--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello world I am working in GitHub</h1>
-    <p>dwaraga ,gayathri,gopika , asifa</p>
+    <p>gayu gops dwara asifa </p>
 </body>
 </html>
